added daily_habits_more page link in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <li>   <a href="./pages/daily_habits/daily_habits.html">
                     Daily habits
                 </a></li>
+                <li>   <a href="./pages/daily_habits_more/daily_habits_more.html">
+                    More Daily habits
+                </a></li>
             </ul>
         </div>
     </a>
