index.html: did some code formatting

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <h1 class="page-title">AI SUGGESTS:</h1>
         <div class="entries">
             <ul>
-                <li>   <a href="./pages/10mins_vocal_exercise_routine/10mins_vocal_exercise_routine.html">
+                <li>   
+                    <a href="./pages/10mins_vocal_exercise_routine/10mins_vocal_exercise_routine.html">
                     10 mins vocal exercise routine
                 </a></li>
-                <li>   <a href="./pages/daily_habits/daily_habits.html">
+
+                <li>   
+                    <a href="./pages/daily_habits/daily_habits.html">
                     Daily habits
                 </a></li>
-                <li>   <a href="./pages/daily_habits_more/daily_habits_more.html">
+
+                <li>   
+                    <a href="./pages/daily_habits_more/daily_habits_more.html">
                     More Daily habits
                 </a></li>
+
             </ul>
         </div>
     </a>
